--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,9 @@
   <div class="topbar">
     <div class="brand">Scuba Dives</div>
     <div class="user">
+      <a href="conditions.html">
+      <button class="btn secondary">Weather condition check</button>
+      </a>
       <span id="user-email">Not Logged in</span>
       <button id="btn-logout" class="btn secondary">Log Out</button>
     </div>
@@ -157,7 +160,7 @@
 
         <div style="margin-top:8px;">
           <label>Notes</label>
-          <textarea id="notes" placeholder="今天看到了鹰鳐和白鳍鲨..."></textarea>
+          <textarea id="notes" placeholder="Today we saw an eagle ray..."></textarea>
         </div>
 
         <div style="margin-top:12px; display:flex; gap:10px; align-items:center;">
