--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -27,9 +27,9 @@
     <form id="register-form" class="form">
       <label>Email</label>
       <input id="register-email" type="email" required placeholder="you@example.com">
-      <label>password</label>
-      <input id="register-password" type="password" required placeholder="at lease len 6">
-      <button type="submit">Login</button>
+      <label>Password</label>
+      <input id="register-password" type="password" required placeholder="at least 6 characters">
+      <button type="submit">Register</button>
       <p class="msg" id="register-msg"></p>
     </form>
   </div>
